# mmore-tui

./: .gitignore  README.md  pyproject.toml
src/mmore_tui/: __init__.py  app.py  commands.py  config_builder.py  runner.py
src/mmore_tui/screens/: __init__.py  chat.py  command_list.py  config_choice.py  config_form.py  home.py  pipeline.py  run.py
tests/: test_config_builder.py  test_smoke.py
