[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmore-tui"
version = "0.1.0"
description = "Terminal UI for mmore — interactive command launcher and pipeline runner"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arthur Perrin" }]
dependencies = [
    "mmore>=1.2.2",
    "textual>=0.80",
    "rich>=13",
    "pyyaml>=6",
    "click>=8",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
mmore-tui = "mmore_tui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mmore_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
